# htru2_ffnnpy

./: .gitignore  .gitmodules  AGENTS.md  configure_model.py  dataset_split.py  ffnnpy_compat.py  main.py  model_hyperparams.py  project_paths.py  pyproject.toml  read_htru2_arff.py  train_model.py  training_history.py
default-run/: hyperparams.json  model.ffnnpy  training_history.json
experiments/: htru2_hyperparameter_sweep.py  htru2_saved_model_stats.py  run_hyperparam_sweep_hpc.py  run_saved_model_stats_hpc.py
history-run/: hyperparams.json  model.ffnnpy  training_history.json
progress-run/: hyperparams.json  model.ffnnpy
replay-run/: hyperparams.json  model.ffnnpy  training_history.json
results/: htru2_eval_viewer.html
results.bk/codex_resume_smoke_20260408/: dataset_split.json  hyperparams.json  model.ffnnpy  training_history.json
results.bk/htru2_hyperparameter_sweep_20260407_full/: results.csv  summary.json  summary.md
results.bk/htru2_hyperparameter_sweep_20260407_full_2/: results.csv  summary.json  summary.md
results.bk/htru2_hyperparameter_sweep_20260407_full_3/: best_model.ffnnpy  best_model_stats.json  results.csv  summary.json  summary.md
results.bk/htru2_hyperparameter_sweep_20260407_full_4/: best_model.ffnnpy  hyperparams.json  model.ffnnpy  model_stats.json  results.csv  summary.json  summary.md  training_history.json
results.bk/htru2_model_10/: notes.md  (+5 more)
resume-noop-run/: training_history.json
resume-run/: dataset_split.json
smoke-run/: hyperparams.json
tests/: test_run_hyperparam_sweep_hpc.py  test_run_saved_model_stats_hpc.py
(+110 files in other folders)
