[project]
name = "capstone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.8",
    "neural-net",
    "numba>=0.65.0",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]

[tool.uv.workspace]
members = [
    "ffnnpy",
]

[tool.uv.sources]
neural-net = { workspace = true }
